fix: small white part on mobile

--- a/src/index.css
+++ b/src/index.css
@@ -13,5 +13,5 @@ body{
   width: 100%;
   margin: 0;
   padding: 0;
-  overflow-x: hidden;
 }
+
